eventing/broker-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: my-broker
  namespace: knative-eventing
  labels:
    app.kubernetes.io/component: broker-ingress
    app.kubernetes.io/name: knative-eventing
    eventing.knative.dev/brokerRole: ingress
spec:
  host: broker-knative-eventing.apps.ocp4.rhlab.de
  to:
    kind: Service
    name: broker-ingress
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
